tests/setup.js
// Jest setup file for additional configurations
// Add any global test setup here

global.TextEncoder = globalThis.TextEncoder || require('util').TextEncoder;
global.TextDecoder = globalThis.TextDecoder || require('util').TextDecoder;

// Example: Mock console methods if needed
global.console = {
  ...console,
  // Uncomment to ignore console logs during tests
  // log: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
};

// Global test setup
global.TextEncoder = TextEncoder;
global.TextDecoder = TextDecoder;

// Mock localStorage
const localStorageMock = {
  getItem: jest.fn(),
  setItem: jest.fn(),
  removeItem: jest.fn(),
  clear: jest.fn(),
};
global.localStorage = localStorageMock;

// Mock alert, confirm, prompt
global.alert = jest.fn();
global.confirm = jest.fn();
global.prompt = jest.fn();
